# messages-p2p

./: Cargo.toml
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/poc/p2p/app/: MainActivity.kt
android-app/app/src/main/java/uniffi/bindings_p2p/: bindings_p2p.kt
bindings-p2p/: Cargo.toml  build.sh
bindings-p2p/src/: bindings_p2p.udl  lib.rs
src/: lib.rs  main.rs
src/p2p/: behaviours.rs  bootstrap.rs  handlers.rs  node.rs
