[package]
name = "messages-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version="0.55.0", features = [ "tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux", "gossipsub"] }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
tokio = { version="1.45.0", features=["full"] }
anyhow = "1.0.98"
once_cell = "1.21.3"


